# savesave

./: .gitignore  .savesave.example  .savesaves  .suppress  CMakeLists.txt  INSTALL.uni  INSTALL.win  ISSUE  Kconfig  Makefile  NEXT  README  TAGGING  TODO  make.ps1  savesave  savesave.manifest  savesave.manifest.in  savesave.rc  savesave.res  version  winbuild.ps1
arch/arm64/: syscall.h
arch/generic/: syscall.h
arch/riscv/: syscall.h
arch/x86/: syscall.h
commands/: backup.c  copy.c  help.c  query.c  sizeof.c  version.c
entry/: savesave.c  savesave.cpp  uni.c  wincon.c  wingui.c
include/: acpy.h  alloc.h  ansidecl.h  apphelp.h.in  appinfo.h.in  appname.h.in  argupar.h  atenter.h  atexit.h  backup.h  baksched.h  baktimer.h  baktmr.h  barrier.h  brtcomcent.h  calc.h  cls.h  cnsl.h  cntio.h  command.h  compat.h  compiler.h  compress.h  console.h  constructor.h  cp.h  cpsched.h  debug.h  dotsav.h  fcpy.h  fileiter.h  getargv.h  getconf.h  getopt.h  i18n.h  ioop.h  iter.h  keepref.h  list.h  maincmd.h  (+24 more)
include/barroit/: ctype.h  io.h  limits.h  resource.h  size.h  string.h  threads.h  time.h  types.h  zstd.h
include/uni/: cp.h
include/win/: alloc.hpp  atenter.hpp  autovar.hpp  backup.hpp  cmdline.hpp  console.hpp  dumpstack.hpp  notifyicon.hpp  resid.hpp  savconf.hpp  termas.hpp  termsg.hpp  ui.hpp  window.hpp
locale/: ja_JP.po  zh_CN.po
locale/ja_JP/LC_MESSAGES/: savesave.mo
locale/zh_CN/LC_MESSAGES/: savesave.mo
oldwin/: backup.cpp  cmdline.cpp  console.cpp  menu.cpp  notifyicon.cpp  window.cpp  winexit.c
oldwin/win/: backup.hpp
platfree/: alloc.c  argupar.c  atexit.c  backup.c  baksched.c  baktimer.c  baktmr.c  cls.c  cntio.c  compress.c  cpsched.c  dir.c  dotsav.c  fcpy.c  fileiter.c  getconf.c  getopt.c  getopt1.c  i18n.c  ioop.c  keepref.c  mkdir.c  mkzip.c  noleak.c  path.c  poll.c  proc.c  readfile.c  robio.c  runopt.c  savconf.c  savesave.c  strbuf.c  string.c  strlist.c  termas.c  termsg.c  text2num.c  threads.c  trace.c  (+2 more)
platfree/command/: help.c  sizeof.c  start.c  tmp  version.c
platspec/linux/: acpy.c  fcpy.c  mcpy.c  path.c  version.c
platspec/unix/: baktimer.c  baktmr.c  cntio.c  fcpy.c  fileiter.c  main.c  mkdir.c  path.c  proc.c  resource.c  threads.c  time.c
platspec/win32/: acpy.c  atenter.c  baktimer.c  baktmr.c  basename.c  cnsl.c  cnsl.h  console.c  dirname.c  dumpstack.c  exit.c  fcpy.c  fileiter.c  getargv.c  getargv.h  main.c.c  main.g.c  menu.c  menu.h  mkdir.c  notifyicon.c  notifyicon.h  path.c  proc.c  prog.c  prog.h  resid.h  resource.c  savconf.c  setenv.c  strchrnul.c  termas.c  threads.c  time.c  unlink.c  version.c  window.c  window.h  winexit.c
scripts/: apphelp.h.in  appname.h.in  arch-linux.cmake  func.cmake  gen-command.sh  gen-constructor.sh  gencmdh.sh  genh-command.sh  genh-constructor.sh  genheader.cmake  helper.cmake  kconfig.cmake  make-tag.sh  maspo.sh  report-garbage-line  seed-backups.sh  utils.cmake
sscmds/: backup.c  help.c  query.c  version.c
uni/: backup.c  baktimer.c  cntio.c  cp.c  dir.c  fcpy.c  fileiter.c  getconf.c  mkdir.c  path.c  proc.c  resource.c  robio.c  savconf.c  time.c
win/: alloc.cpp  atenter.c  atenter.cpp  backup.c  backup.cpp  baktimer.c  cmdline.cpp  console.c  console.cpp  dir.cpp  dirname.c  dumpstack.c  dumpstack.cpp  fileiter.c  fileiter.cpp  getargv.c  getconf.cpp  menu.c  menu.cpp  mkdir.c  notifyicon.c  notifyicon.cpp  path.c  path.cpp  proc.c  resource.c  robio.cpp  savconf.c  savconf.cpp  setenv.c  strchrnul.cpp  termas.c  termas.cpp  termsg.cpp  time.c  window.c  window.cpp  winexit.c  winexit.cpp
